logs/Slang/chapter-6/6.20.6--const.sv.log
name: const
description: const test
should_fail: 0
tags: 6.20.6
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.20.6--const.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.20.6--const.sv:8:2: error: language feature not yet supported
	class test_cls;
	^~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.20.6--const.sv:16:8: error: use of undeclared identifier 'test_cls'
	const test_cls test_obj = new;
	      ^~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.20.6--const.sv:16:28: error: language feature not yet supported
	const test_cls test_obj = new;
	                          ^~~
